Apply changes from upstream
https://github.com/qt/qtbase/commit/199b2594ff08b8341126165f17bbef8af54351ec
https://github.com/qt/qtbase/commit/6315745770384490509cf471c6286a1ea32cb79e

--- a/mkspecs/linux-icc/qmake.conf
+++ b/mkspecs/linux-icc/qmake.conf
@@ -31,6 +31,7 @@ QMAKE_CFLAGS_SHLIB	= -fPIC -fno-jump-tables
 QMAKE_CFLAGS_STATIC_LIB	= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CFLAGS_YACC	=
 QMAKE_CFLAGS_THREAD	= -D_REENTRANT
+QMAKE_CFLAGS_SPLIT_SECTIONS = -ffunction-sections
 
 QMAKE_CXX		= icpc
 QMAKE_CXXFLAGS		= $$QMAKE_CFLAGS
@@ -43,6 +44,7 @@ QMAKE_CXXFLAGS_SHLIB	= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CXXFLAGS_STATIC_LIB = $$QMAKE_CFLAGS_STATIC_LIB
 QMAKE_CXXFLAGS_YACC	= $$QMAKE_CFLAGS_YACC
 QMAKE_CXXFLAGS_THREAD	= $$QMAKE_CFLAGS_THREAD
+QMAKE_CXXFLAGS_SPLIT_SECTIONS = $$QMAKE_CFLAGS_SPLIT_SECTIONS
 
 QMAKE_INCDIR		=
 QMAKE_LIBDIR		=
