--- a/mkspecs/common/linux.conf
+++ b/mkspecs/common/linux.conf
@@ -4,6 +4,7 @@
 
 QMAKE_CFLAGS_THREAD	+= -D_REENTRANT
 QMAKE_CXXFLAGS_THREAD	+= $$QMAKE_CFLAGS_THREAD
+QMAKE_LFLAGS_GCSECTIONS = -Wl,--gc-sections
 
 QMAKE_INCDIR          =
 QMAKE_LIBDIR          =
