--- a/mkspecs/common/clang.conf
+++ b/mkspecs/common/clang.conf
@@ -15,3 +15,12 @@ QMAKE_CFLAGS_PRECOMPILE          = -x c-header -c ${QMAKE_PCH_INPUT} -o ${QMAKE_
 QMAKE_CFLAGS_USE_PRECOMPILE      = -Xclang -include-pch -Xclang ${QMAKE_PCH_OUTPUT}
 QMAKE_CXXFLAGS_PRECOMPILE        = -x c++-header -c ${QMAKE_PCH_INPUT} -o ${QMAKE_PCH_OUTPUT}
 QMAKE_CXXFLAGS_USE_PRECOMPILE    = $$QMAKE_CFLAGS_USE_PRECOMPILE
+
+QMAKE_CFLAGS_SSE2    += -msse2
+QMAKE_CFLAGS_SSE3    += -msse3
+QMAKE_CFLAGS_SSSE3   += -mssse3
+QMAKE_CFLAGS_SSE4_1  += -msse4.1
+QMAKE_CFLAGS_SSE4_2  += -msse4.2
+QMAKE_CFLAGS_AVX     += -mavx
+QMAKE_CFLAGS_AVX2    += -mavx2
+QMAKE_CFLAGS_NEON    += -mfpu=neon
